# Yoru

./: Cargo.toml  LICENSE  README.md  install.sh
docs/: ARCHITECTURE.md  DOCTAGS.md
examples/: workspace.sample.yaml
src/: lib.rs  main.rs
src/app/: actions.rs  mod.rs  state.rs
src/cli/: args.rs  entry.rs  mod.rs
src/core/: mod.rs  models.rs  validation.rs  workspace.rs
src/http/: auth.rs  client.rs  executor.rs  mod.rs  scripting.rs  templating.rs
src/storage/: fs_store.rs  mod.rs  schema.rs
src/tui/: events.rs  mod.rs  theme.rs  ui.rs
src/util/: error.rs  logging.rs  mod.rs  time.rs
web/: index.html  tailwind.config.ts
web/src/: App.tsx  index.css
web/src/components/: FragmentLetter.tsx  ScatterButton.tsx  SiteFooter.tsx  TopBar.tsx
web/src/pages/: Docs.tsx  Index.tsx
